--- a/about.html
+++ b/about.html
@@ -27,10 +27,11 @@ a:hover, a:active {
 
 
 
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/home.html">Home</a>&nbsp&nbsp&nbsp
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/contacts.html">Contacts</a>&nbsp&nbsp&nbsp
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/resume.html">Resume</a>&nbsp&nbsp&nbsp
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/gallery.html">Gallery</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/index.html">Home</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/contacts.html">Contacts</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/resume.html">Resume</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/gallery.html">Gallery</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/snake.html">Snake</a>
 <HR>
 
 <center><h1 style=color:#ffffff>Who am i?<br></h1></center>
