--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ body {
 <h1 style=color:#ffffff>HomePage</h1>
 
 
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/about.html">About</a>&nbsp&nbsp&nbsp
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/contacts.html">Contacts</a>&nbsp&nbsp&nbsp
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/resume.html">Resume</a>&nbsp&nbsp&nbsp
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/gallery.html">Gallery</a>&nbsp&nbsp&nbsp
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/snake.html">Snake</a>
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/about.html">About</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/contacts.html">Contacts</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/resume.html">Resume</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/gallery.html">Gallery</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/snake.html">Snake</a>
 <hr>
 
 <center><h2 style=color:#ffffff>Welcome to my website <br>where i don't what i'm doing</h2> 
