--- a/gallery.html
+++ b/gallery.html
@@ -24,10 +24,11 @@ a:hover, a:active {
     
 <h1 style="font-color:b3b3b3">Gallery</h1>
 
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/home.html">Home</a>&nbsp&nbsp&nbsp
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/about.html">About</a>&nbsp&nbsp&nbsp
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/contacts.html">Contacts</a>&nbsp&nbsp&nbsp
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/resume.html">Resume</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/index.html">Home</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/about.html">About</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/contacts.html">Contacts</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/resume.html">Resume</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/snake.html">Snake</a>
 <hr>
 
 <head>
