--- a/resume.html
+++ b/resume.html
@@ -24,10 +24,11 @@ a:hover, a:active {
 
 <h1 style=color:#ffffff>Resume</h1>
 
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/home.html">Home</a>&nbsp&nbsp&nbsp
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/about.html">About</a>&nbsp&nbsp&nbsp
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/contacts.html">Contacts</a>&nbsp&nbsp&nbsp
-<a href="file:///media/removable/USB%20Drive/TLE%20Project/gallery.html">Gallery</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/index.html">Home</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/about.html">About</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/contacts.html">Contacts</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/gallery.html">Gallery</a>&nbsp&nbsp&nbsp
+<a href="file:///home/chronos/u-bc284639e78d2612cf5d93a790f35f2438842543/MyFiles/TLE%20peta/TLE%20Project/snake.html">Snake</a>
 <hr>
 
 <p style=color:#ffffff>John Carlo Perez<br>-Gender:male <br>-Age:15</p>
